.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
13:44:02 **** Rebuild of configuration Debug for project Connect_K_AI ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Move.o "..\\Move.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o ConnectK.o "..\\ConnectK.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o AIShell.o "..\\AIShell.cpp" 
g++ -o Connect_K_AI.exe Move.o ConnectK.o AIShell.o 
17:06:08 **** Rebuild of configuration Debug for project Connect_K_AI ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Move.o "..\\Move.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o AIShell.o "..\\AIShell.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o ConnectK.o "..\\ConnectK.cpp" 
g++ -o Connect_K_AI.exe Move.o ConnectK.o AIShell.o 
Info: Nothing to build for GameTree
Info: Nothing to build for Connect_K_AI
17:12:02 **** Incremental Build of configuration Debug for project GameTree ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
In file included from ..\main.cpp:1:0:
..\gametree.h:10:3: warning: identifier 'nullptr' is a keyword in C++11 [-Wc++0x-compat]
   GameTree() : first_child(nullptr), next_sibling(nullptr), parent(nullptr)
   ^
..\gametree.h:20:37: error: 'nullptr' was not declared in this scope
   GameTree(T value, GameTree<T>* fc=nullptr, GameTree<T>* ns = nullptr, GameTree<T>* p = nullptr)
                                     ^
..\gametree.h:20:64: error: 'nullptr' was not declared in this scope
   GameTree(T value, GameTree<T>* fc=nullptr, GameTree<T>* ns = nullptr, GameTree<T>* p = nullptr)
                                                                ^
..\gametree.h:20:90: error: 'nullptr' was not declared in this scope
   GameTree(T value, GameTree<T>* fc=nullptr, GameTree<T>* ns = nullptr, GameTree<T>* p = nullptr)
                                                                                          ^
..\gametree.h: In constructor 'GameTree<T>::GameTree()':
..\gametree.h:10:28: error: 'nullptr' was not declared in this scope
   GameTree() : first_child(nullptr), next_sibling(nullptr), parent(nullptr)
                            ^
Info: Nothing to build for Connect_K_AI
17:14:04 **** Incremental Build of configuration Debug for project GameTree ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
In file included from ..\main.cpp:1:0:
..\gametree.h:20:3: warning: identifier 'nullptr' is a keyword in C++11 [-Wc++0x-compat]
   GameTree(T value, GameTree<T>* fc=nullptr, GameTree<T>* ns = nullptr, GameTree<T>* p = nullptr)
   ^
..\gametree.h:20:37: error: 'nullptr' was not declared in this scope
   GameTree(T value, GameTree<T>* fc=nullptr, GameTree<T>* ns = nullptr, GameTree<T>* p = nullptr)
                                     ^
..\gametree.h:20:64: error: 'nullptr' was not declared in this scope
   GameTree(T value, GameTree<T>* fc=nullptr, GameTree<T>* ns = nullptr, GameTree<T>* p = nullptr)
                                                                ^
..\gametree.h:20:90: error: 'nullptr' was not declared in this scope
   GameTree(T value, GameTree<T>* fc=nullptr, GameTree<T>* ns = nullptr, GameTree<T>* p = nullptr)
                                                                                          ^
Info: Nothing to build for Connect_K_AI
17:14:28 **** Incremental Build of configuration Debug for project GameTree ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
g++ -o GameTree.exe main.o 
Info: Nothing to build for GameTree
17:15:08 **** Incremental Build of configuration Debug for project GameTree ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
g++ -o GameTree.exe main.o 
